--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h2>Login</h2>
         <form id="loginForm">
             <div class="input-group">
-                <label for="username">User</label>
+                <label for="username">Username</label>
                 <input type="text" id="username" required>
             </div>
             <div class="input-group">
