Made few changes in login form

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <h2>Login</h2>
         <form id="loginForm">
             <div class="input-group">
-                <label for="username">Username</label>
+                <label for="username">User</label>
                 <input type="text" id="username" required>
             </div>
             <div class="input-group">
-                <label for="password">Password</label>
+                <label for="password">Pass</label>
                 <input type="password" id="password" required>
             </div>
             <button type="submit">Login</button>
